--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         <a href="#"><img src="images/offers/9.png" class="sale_item" /></a>
         <a href="#"><img src="images/offers/10.png" class="sale_item" /></a>
       </div>
-      </div>
 
       <div class="category_heading">SHOP BY CATEGORY</div>
       <div class="category_items">
@@ -86,13 +85,43 @@
         <a href="#"><img src="images/categories/8.jpg" class="sale_item" /></a>
         <a href="#"><img src="images/categories/9.jpg" class="sale_item" /></a>
         <a href="#"><img src="images/categories/10.jpg" class="sale_item" /></a>
-       
       </div>
     </main>
     <footer>
-        <div class="footer_container">
-            
+      <div class="footer_container">
+        <div class="footer_column">
+          <h3>ONLINE SHOPPING</h3>
+          <a href="#">Men</a>
+          <a href="#">Women</a>
+          <a href="#">Kids</a>
+          <a href="#">Home & Living</a>
+          <a href="#">Beauty</a>
+          <a href="#">Gift Card</a>
+          <a href="#"> Myntra Insider</a>
         </div>
+        <div class="footer_column">
+          <h3>ONLINE SHOPPING</h3>
+          <a href="#">Men</a>
+          <a href="#">Women</a>
+          <a href="#">Kids</a>
+          <a href="#">Home & Living</a>
+          <a href="#">Beauty</a>
+          <a href="#">Gift Card</a>
+          <a href="#"> Myntra Insider</a>
+        </div>
+        <div class="footer_column">
+          <h3>ONLINE SHOPPING</h3>
+          <a href="#">Men</a>
+          <a href="#">Women</a>
+          <a href="#">Kids</a>
+          <a href="#">Home & Living</a>
+          <a href="#">Beauty</a>
+          <a href="#">Gift Card</a>
+          <a href="#"> Myntra Insider</a>
+        </div>
+      </div>
+      <hr>
+      <div class="copyright">© 2025 www.myntra.com. All rights reserved.</div>
     </footer>
   </body>
 </html>
